dpkg (1.15.8.7) UNRELEASED; urgency=low

  [ Guillem Jover ]
  * Defer symlink renames so that there's never a point were a symlink
    is broken, this is particularly important for shared libraries.
    Closes: #605536

  [ Updated manpage translations ]
  * French (Christian Perrier).

  [ Updated dpkg translations ]
  * Catalan (Guillem Jover).
  * German (Sven Joachim).
  * French (Christian Perrier).
  * Czech (Miroslav Kure). Closes: #605099
  * Indonesian (Arief S Fitrianto). Closes: #605248
  * Portuguese (Miguel Figueiredo). Closes: #605506
  * Spanish (Javier Fernandez-Sanguino)

  [ Updated man page translations ]
  * German (Helge Kreutzmann).

  [ Updated dselect translations ]
  * Spanish (Javier Fernandez-Sanguino)

  [ Updated programs translations ]
  * Spanish (Javier Fernandez-Sanguino)

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 25 Nov 2010 16:41:56 +0100

dpkg (1.15.8.6) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Ensure debian/source/local-options is always excluded from the source
    package even if the user provides customized -i or -I options.
    Closes: #597023
  * Fix Dpkg::Version's handling of version with a debian revision but an
    empty version (e.g. "-0.1"). Thanks to James Vega <jamessan@debian.org>
    for the patch. Closes: #597651
  * With "3.0 (quilt)" source package, create .pc/.quilt_series with the
    correct series file if the source package provides vendor specific patch
    sets.

  [ Guillem Jover ]
  * Disable by default usage of synchronous sync(2), as it causes undesired
    I/O on unrelated file systems. Closes: #588339, #595927, #600075
  * Add new --force-unsafe-io to disable safe I/O operations on unpack.
    Closes: #584254

  [ Updated man page translations ]
  * French (Christian Perrier). Including a typo fix and a typographical
    change reported by Vincent Danjean. Closes: #601852
  * Spanish (Omar Campagne). Closes: #596519

  [ Updated programs translations ]